--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,7 +2,9 @@
 
 <div *ngFor="let product of products">
 	<h3>
-		<a [title]="product.name + ' details'">{{product.name}}</a>
+		<a [title]="product.name + ' details'" [routerLink]="['/products', product.id]">
+			{{ product.name }}
+		</a>
 	</h3>
 
 	<p *ngIf="product.description">
@@ -13,9 +15,7 @@
     Share
   </button>
 
-	<app-product-alerts 
-    [product]="product"
-    (notify)="onNotify()"></app-product-alerts>
+	<app-product-alerts [product]="product" (notify)="onNotify()"></app-product-alerts>
 </div>
 
 <!-- 
